--- a/configure.ac
+++ b/configure.ac
@@ -60,9 +60,11 @@ AC_CONFIG_FILES([\
     magick.sh \
     PerlMagick/check.sh \
     PerlMagick/Magick.pm \
-    PerlMagick/Magick.xs \
     PerlMagick/Makefile.PL \
-    PerlMagick/typemap \
+    PerlMagick/quantum/Makefile.PL \
+    PerlMagick/quantum/quantum.pm \
+    PerlMagick/quantum/quantum.xs \
+    PerlMagick/quantum/typemap \
     utilities/animate.1 \
     utilities/compare.1 \
     utilities/composite.1 \
