--- a/Makefile.in
+++ b/Makefile.in
@@ -262,8 +262,9 @@ DIST_COMMON = $(srcdir)/m4/Makefile.am $(srcdir)/config/Makefile.am \
 	$(top_srcdir)/magick/MagickCore.pc.in \
 	$(top_srcdir)/magick/version.h.in $(srcdir)/magick.sh.in \
 	$(top_srcdir)/PerlMagick/check.sh.in \
-	$(top_srcdir)/PerlMagick/Magick.pm.in \
+	$(top_srcdir)/PerlMagick/default/Magick.pm.in \
 	$(top_srcdir)/PerlMagick/Makefile.PL.in \
+	$(top_srcdir)/PerlMagick/default/Makefile.PL.in \
 	$(top_srcdir)/PerlMagick/quantum/Makefile.PL.in \
 	$(top_srcdir)/PerlMagick/quantum/quantum.pm.in \
 	$(top_srcdir)/PerlMagick/quantum/quantum.xs.in \
@@ -338,15 +339,16 @@ CONFIG_CLEAN_FILES = common.shi config/configure.xml \
 	magick/ImageMagick.pc Magick++/lib/ImageMagick++.pc \
 	Magick++/lib/Magick++.pc magick/Magick-config \
 	magick/MagickCore-config magick/MagickCore.pc magick/version.h \
-	magick.sh PerlMagick/check.sh PerlMagick/Magick.pm \
-	PerlMagick/Makefile.PL PerlMagick/quantum/Makefile.PL \
-	PerlMagick/quantum/quantum.pm PerlMagick/quantum/quantum.xs \
-	PerlMagick/quantum/typemap utilities/animate.1 \
-	utilities/compare.1 utilities/composite.1 utilities/conjure.1 \
-	utilities/convert.1 utilities/display.1 utilities/identify.1 \
-	utilities/ImageMagick.1 utilities/import.1 utilities/mogrify.1 \
-	utilities/montage.1 utilities/stream.1 wand/MagickWand-config \
-	wand/MagickWand.pc wand/Wand-config wand/Wand.pc
+	magick.sh PerlMagick/check.sh PerlMagick/default/Magick.pm \
+	PerlMagick/Makefile.PL PerlMagick/default/Makefile.PL \
+	PerlMagick/quantum/Makefile.PL PerlMagick/quantum/quantum.pm \
+	PerlMagick/quantum/quantum.xs PerlMagick/quantum/typemap \
+	utilities/animate.1 utilities/compare.1 utilities/composite.1 \
+	utilities/conjure.1 utilities/convert.1 utilities/display.1 \
+	utilities/identify.1 utilities/ImageMagick.1 \
+	utilities/import.1 utilities/mogrify.1 utilities/montage.1 \
+	utilities/stream.1 wand/MagickWand-config wand/MagickWand.pc \
+	wand/Wand-config wand/Wand.pc
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -2581,6 +2583,10 @@ LIBTOOL = @LIBTOOL@
 
 # Automagically reconfigure libtool
 LIBTOOL_DEPS = @LIBTOOL_DEPS@
+LIB_BIN_BASEDIRNAME = @LIB_BIN_BASEDIRNAME@
+LIB_BIN_DIR = @LIB_BIN_DIR@
+LIB_BIN_DIR_PATH = @LIB_BIN_DIR_PATH@
+LIB_BIN_DIR_RELATIVE_PATH = @LIB_BIN_DIR_RELATIVE_PATH@
 LIB_DIR = @LIB_DIR@
 LIB_DL = @LIB_DL@
 LIPO = @LIPO@
@@ -5048,9 +5054,11 @@ magick.sh: $(top_builddir)/config.status $(srcdir)/magick.sh.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 PerlMagick/check.sh: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/check.sh.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
-PerlMagick/Magick.pm: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/Magick.pm.in
+PerlMagick/default/Magick.pm: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/default/Magick.pm.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 PerlMagick/Makefile.PL: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/Makefile.PL.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+PerlMagick/default/Makefile.PL: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/default/Makefile.PL.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 PerlMagick/quantum/Makefile.PL: $(top_builddir)/config.status $(top_srcdir)/PerlMagick/quantum/Makefile.PL.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
@@ -10348,7 +10356,8 @@ install-dvi-am:
 
 install-exec-am: install-binPROGRAMS install-binSCRIPTS \
 	install-exec-local install-libLTLIBRARIES
-
+	@$(NORMAL_INSTALL)
+	$(MAKE) $(AM_MAKEFLAGS) install-exec-hook
 install-html: install-html-recursive
 
 install-html-am:
@@ -10399,11 +10408,12 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
 	uninstall-magickincarchHEADERS uninstall-magickppincHEADERS \
 	uninstall-magickpptopincHEADERS uninstall-man \
 	uninstall-pkgconfigDATA uninstall-wandincHEADERS
-
+	@$(NORMAL_INSTALL)
+	$(MAKE) $(AM_MAKEFLAGS) uninstall-hook
 uninstall-man: uninstall-man1
 
 .MAKE: $(am__recursive_targets) all check check-am install install-am \
-	install-strip
+	install-exec-am install-strip uninstall-am
 
 .PHONY: $(am__recursive_targets) CTAGS GTAGS TAGS all all-am all-local \
 	am--refresh check check-TESTS check-am check-local clean \
@@ -10421,23 +10431,23 @@ uninstall-man: uninstall-man1
 	install-configlibDATA install-configshareDATA \
 	install-configsharearchDATA install-data install-data-am \
 	install-data-local install-docDATA install-dvi install-dvi-am \
-	install-exec install-exec-am install-exec-local \
-	install-filtersLTLIBRARIES install-html install-html-am \
-	install-includeHEADERS install-info install-info-am \
-	install-libLTLIBRARIES install-magickincHEADERS \
-	install-magickincarchHEADERS install-magickppincHEADERS \
-	install-magickpptopincHEADERS install-man install-man1 \
-	install-pdf install-pdf-am install-pkgconfigDATA install-ps \
-	install-ps-am install-strip install-wandincHEADERS \
-	installcheck installcheck-am installdirs installdirs-am \
-	maintainer-clean maintainer-clean-generic \
-	maintainer-clean-local mostlyclean mostlyclean-compile \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	recheck tags tags-am uninstall uninstall-am \
-	uninstall-binPROGRAMS uninstall-binSCRIPTS \
+	install-exec install-exec-am install-exec-hook \
+	install-exec-local install-filtersLTLIBRARIES install-html \
+	install-html-am install-includeHEADERS install-info \
+	install-info-am install-libLTLIBRARIES \
+	install-magickincHEADERS install-magickincarchHEADERS \
+	install-magickppincHEADERS install-magickpptopincHEADERS \
+	install-man install-man1 install-pdf install-pdf-am \
+	install-pkgconfigDATA install-ps install-ps-am install-strip \
+	install-wandincHEADERS installcheck installcheck-am \
+	installdirs installdirs-am maintainer-clean \
+	maintainer-clean-generic maintainer-clean-local mostlyclean \
+	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
+	pdf pdf-am ps ps-am recheck tags tags-am uninstall \
+	uninstall-am uninstall-binPROGRAMS uninstall-binSCRIPTS \
 	uninstall-codersLTLIBRARIES uninstall-configlibDATA \
 	uninstall-configshareDATA uninstall-configsharearchDATA \
-	uninstall-docDATA uninstall-filtersLTLIBRARIES \
+	uninstall-docDATA uninstall-filtersLTLIBRARIES uninstall-hook \
 	uninstall-includeHEADERS uninstall-libLTLIBRARIES \
 	uninstall-local uninstall-magickincHEADERS \
 	uninstall-magickincarchHEADERS uninstall-magickppincHEADERS \
@@ -10548,6 +10558,20 @@ install-exec-local: $(PERLMAGICK_INSTALL_EXEC_LOCAL_TARGETS)
 install-data-local: $(MAGICK_INSTALL_DATA_LOCAL_TARGETS) $(PERLMAGICK_INSTALL_DATA_LOCAL_TARGETS) $(HTML_INSTALL_DATA_TARGETS)
 
 uninstall-local: $(MAGICK_UNINSTALL_LOCAL_TARGETS) $(PERLMAGICK_UNINSTALL_LOCAL_TARGETS) $(HTML_UNINSTALL_DATA_TARGETS)
+
+install-exec-hook:
+	$(install_sh) -d  $(DESTDIR)/$(LIB_BIN_DIR_PATH)
+	cd $(DESTDIR)/$(bindir) && \
+	for CURR_PROG in `echo $(UTILITIES_PGMS) | sed 's/utilities\///g'`; do \
+		mv -f ./$$CURR_PROG$(EXEEXT) $(DESTDIR)/$(LIB_BIN_DIR_PATH)/$$CURR_PROG$(EXEEXT) && \
+		$(LN_S) $(LIB_BIN_DIR_PATH)/$$CURR_PROG$(EXEEXT) ./$$CURR_PROG$(EXEEXT); \
+	done;
+
+uninstall-hook:
+	for CURR_PROG in `echo $(UTILITIES_PGMS) | sed 's/utilities\///g'`; do \
+		rm -f $(DESTDIR)/$(LIB_DIR_PATH)/$$CURR_PROG$(EXEEXT)
+	done;
+	rm -r -f $(LIB_BIN_DIR_PATH)
 
 clean-local: $(PERLMAGICK_CLEAN_LOCAL_TARGETS)
 
